fix for bug #51267.  intermittent failure when loading files from jars. the problem is that nsZipArchive and zlib are not thread safe. for now, add a lock to prevent multiple threads from getting into that code r=warren,dveditz super-end-of-game-review=mscott